<resources>
    <string name="app_name" translatable="false">Holy Time</string>

    <string name="sync_account_type" translatable="false">holytime.tuxan.com</string>
    <string name="content_authority" translatable="false">com.tuxan.holytime</string>

    <string name="main_title_holy" translatable="false">Holy</string>
    <string name="main_title_time" translatable="false">Time</string>

    <!-- Tabs -->
    <string name="tab_current">Current</string>
    <string name="tab_favorites">Favorites</string>

    <!-- transitions -->
    <string name="meditation_container_share_element" translatable="false">meditation_container_share_element</string>
    <string name="meditation_title_share_element" translatable="false">meditation_title_share_element</string>
    <string name="meditation_verse_share_element" translatable="false">meditation_verse_share_element</string>

    <!-- Share URL -->
    <string name="share_title">Share Meditation</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>

    <string name="meditation_detail_url" translatable="false">http://holytime.gabrielbrieva.cl/m/</string>

    <!-- Sunrise and Sunset Info -->
    <string name="sunrise_sunset_info_title">Sunrise and Sunset</string>
    <string name="sunrise_sunset_info">Sunrise and Sunset calculated based on your current location.</string>
    <string name="sunrise_sunset_info_is_holy_time">It\'s Holy Time</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="location_permission">Permission required to access your current location and calculate sunset time.</string>

    <!-- About -->
    <string name="about_title">About Holy Time</string>
    <string name="about_text">
        <![CDATA[
        <h2>HolyTime 1.0</h2>
        <p>Many people meditate about God and reserve time to Him each Sabbath (Exodus 20:8-11), but sometimes the job or other activities make to forget that Holy Time was reserved to enjoy His bless and company.</p>
        <p>Holy Time App helps you to not forget your communion with God and give you contents to read and meditate about His greatest love and forgiveness.</p>
        <p>Biblically the Sabbath begins and ends with sunset. So depends on your location, you will receive a notifications at the beginning the Sabbath to read and meditate.</p>
        ]]>
    </string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="pref_notification_enabled_key" translatable="false">pref_notification_enabled_key</string>
    <string name="pref_notification_vibrate_key" translatable="false">pref_notification_vibrate_key</string>
    <string name="pref_notification_led_color_key" translatable="false">pref_notification_led_color_key</string>

    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_information_category">Information</string>
    <string name="pref_summary_notification">Show a notification when start and ends Sabbath</string>
    <string name="pref_title_notification">Notifications Enabled</string>
    <string name="pref_summary_notification_vibrate">Vibrate with each notification</string>
    <string name="pref_title_notification_vibrate">Vibrate Enabled</string>
    <string name="pref_summary_notification_led">Notification Led bink with each notification</string>
    <string name="pref_title_notification_led">Notification Led Enabled</string>
    <string name="pref_summary_notification_ledcolor">Led notification color</string>
    <string name="pref_title_notification_ledcolor">Notification Led Color</string>
    <string name="pref_summary_sunset">Resume of sunset time calculated</string>
    <string name="pref_title_sunset">Sunrise and Sunset</string>
    <string name="pref_title_about">About</string>

    <string-array name="pref_notification_color_key">
        <item>White</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="pref_notification_color_values" translatable="false">
        <item>WHITE</item>
        <item>RED</item>
        <item>GREEN</item>
        <item>BLUE</item>
    </string-array>

    <!-- FCM values -->
    <string name="sync_topic" translatable="false">sync</string>
    <string name="empty_msg">Meditations not found</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- Widget -->
    <string name="widget_is_not_sabbath_yet">It\'s not Sabbath yet</string>
    <string name="next_friday_sunset_info">\'Next Sabbath will start\' MMMM dd, yyyy \'at\' HH:mm</string>

    <!-- Location messages -->
    <string name="enable_location">You must enable device location</string>
    <string name="unable_to_get_location">Impossible to get current location</string>
</resources>
