<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_notifications_category">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notification"
            android:summary="@string/pref_summary_notification"
            android:title="@string/pref_title_notification" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_vibrate"
            android:summary="@string/pref_summary_notification_vibrate"
            android:title="@string/pref_title_notification_vibrate"
            android:dependency="notification" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_led"
            android:summary="@string/pref_summary_notification_led"
            android:title="@string/pref_title_notification_led"
            android:dependency="notification" />

        <ListPreference
            android:defaultValue="WHITE"
            android:entries="@array/pref_notification_color_key"
            android:entryValues="@array/pref_notification_color_values"
            android:key="notification_led_color"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_notification_ledcolor"
            android:summary="@string/pref_summary_notification_ledcolor"
            android:dependency="notification_led" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_information_category" >

        <Preference
            android:title="@string/pref_title_sunset"
            android:summary="@string/pref_summary_sunset" >

            <intent
                android:action="com.tuxan.holytime.SunsetInfoActivity"
                android:targetPackage="com.tuxan.holytime"
                android:targetClass="com.tuxan.holytime.SunsetInfoActivity" />

        </Preference>

        <Preference
            android:title="@string/pref_title_about" >

            <intent
                android:action="com.tuxan.holytime.AboutActivity"
                android:targetPackage="com.tuxan.holytime"
                android:targetClass="com.tuxan.holytime.AboutActivity" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
