<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/HolyTime.ListItemDate"
            tools:text="Month 00" />

        <LinearLayout
            android:id="@+id/ll_shared_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:transitionName="@string/meditation_container_share_element" >

            <TextView
                android:id="@+id/tv_meditation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                style="@style/HolyTime.ListItemTitle"
                android:transitionName="@string/meditation_title_share_element"
                tools:text="Title" />

            <TextView
                android:id="@+id/tv_meditation_verse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/HolyTime.ListItemVerse"
                android:transitionName="@string/meditation_verse_share_element"
                tools:text="Content extract extract extract extract extract extract extract extract extract extract extract extract extract extract extract extract extract extract" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>